Added Score tally

--- a/src/Question.css
+++ b/src/Question.css
@@ -19,6 +19,6 @@
     background-color: lightblue;
 }
 
-.answer-button:active {
-    background-color: lightblue;
-}
+/* .answer-button:focus {
+    background-color: cyan;
+} */
